feature: switch receipts and expenses in mode-switch

--- a/src/shared/lib/lang/ru.json
+++ b/src/shared/lib/lang/ru.json
@@ -2,5 +2,9 @@
     "projects": {
         "receipts": "Поступления",
         "expenses": "Расходы"
+    },
+    "banner": {
+        "receipts": "Поступления за сегодня",
+        "expenses": "Расходы за сегодня"
     }
 }
