feature: add objects-list

--- a/src/shared/lib/lang/ru.json
+++ b/src/shared/lib/lang/ru.json
@@ -1,7 +1,8 @@
 {
     "projects": {
         "receipts": "Поступления",
-        "expenses": "Расходы"
+        "expenses": "Расходы",
+        "my_projects": "Мои проекты"
     },
     "banner": {
         "receipts": "Поступления за сегодня",
