feature: added dynamic calculation of income and expenses

--- a/src/shared/lib/lang/ru.json
+++ b/src/shared/lib/lang/ru.json
@@ -12,5 +12,9 @@
     "banner": {
         "receipts": "Поступления за сегодня",
         "expenses": "Расходы за сегодня"
+    },
+    "all_banner": {
+        "receipts": "Поступления за все время",
+        "expenses": "Расходы за все время"
     }
 }
