feat: add api for project-page

--- a/src/shared/lib/lang/ru.json
+++ b/src/shared/lib/lang/ru.json
@@ -26,5 +26,16 @@
     "empty_transaction": "Платежей не проводилось",
     "type": "Тип платежа",
     "create": "Создать платеж"
+  },
+  "placeholder": {
+    "project": "Проектов пока нет",
+    "object": "Объектов пока нет"
+  },
+  "button": {
+    "back": "< Назад",
+    "delete_project": "Удалить проект",
+    "delete_project_submit": "Вы уверены, что хотите удалить проект?",
+    "cancel": "Отмена",
+    "submit": "Подтвердить"
   }
 }
