feat: add login

--- a/src/shared/lib/lang/ru.json
+++ b/src/shared/lib/lang/ru.json
@@ -29,7 +29,8 @@
     "category": "Категория",
     "all": "Все",
     "materials": "Материалы",
-    "wages": "ЗП"
+    "wages": "ЗП",
+    "null": "Нет описания"
   },
   "placeholder": {
     "project": "Проектов пока нет",
@@ -46,5 +47,6 @@
     "delete_transaction_submit": "Вы уверены, что хотите удалить платеж?",
     "cancel": "Отмена",
     "submit": "Подтвердить"
-  }
+  },
+  "signin": "Авторизироваться"
 }
